<resources>
    <string name="app_name">MedicineTimer</string>

    <string name="main_zero">00</string>
    <string name="main_two_dots">:</string>
    <string name="main_message_time_left">Time left to take your next medicine</string>

    <string name="main_button_add_content_description">This is a button to add time</string>
    <string name="main_button_remove_content_description">This is a button to remove time</string>

    <string name="main_start">Start</string>
    <string name="main_stop">Stop</string>
</resources>
